apps/homeassistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: homeassistant-tls
      hosts:
        - testhomeassistant.picturo.us
  rules:
    - host: testhomeassistant.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-http
                port:
                  name: http
